# fastpfor

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  build.rs  justfile
.github/workflows/: ci.yml
src/: bitpacking.rs  bytebuffer.rs  codec.rs  codecs.rs  composition.rs  compressor.rs  cpp.rs  cursor.rs  error.rs  fastpfor.rs  fastpfor128.rs  helpers.rs  integer_codec.rs  lib.rs  variable_byte.rs
src/bridge/: fastpfor_bridge.cc  fastpfor_bridge.h  mod.rs
src/cpp/: fastpfor_bridge.h  mod.rs
src/fastpfor/: bitpacking.rs  bytebuffer.rs  cursor.rs  fastpfor.rs  helpers.rs  mod.rs
src/generators/: helpers.rs
src/integer_compression/: bitpacking.rs  codec.rs  composition.rs  compressors.rs  fastpfor.rs  helpers.rs  integer_codec.rs  just_copy.rs  mod.rs  skippable_codec.rs  variable_byte.rs
src/integer_compression/differential/: mod.rs
src/rust/: cursor.rs
src/rust/integer_compression/: bitpacking.rs  codec.rs  composition.rs  fastpfor.rs  helpers.rs  integer_codec.rs  just_copy.rs  mod.rs  skippable_codec.rs  variable_byte.rs
tests/: basic_tests.rs  common.rs
