[package]
name = "fastpfor"
version = "0.4.0"
description = "FastPFOR library written in Rust."
authors = ["Francisco Jimenez <jjcfrank@gmail.com>"]
repository = "https://github.com/jjcfrancisco/fastpfor"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["fastpfor", "compression"]
categories = ["compression"]
rust-version = "1.83.0"

[dependencies]
rand = "0.8.5"
thiserror = "2.0.7"

[lints.rust]
unused_assignments = "allow"
dead_code = "allow"

[lints.clippy]
unnecessary_cast = "allow"
ptr_arg = "allow"
needless_range_loop="allow"
