[package]
name = "fastpfor"
version = "0.6.1"
description = "FastPFOR library written in Rust."
authors = ["Francisco Jimenez <jjcfrank@gmail.com>", "Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/jjcfrancisco/fastpfor"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["fastpfor", "compression"]
categories = ["compression"]
rust-version = "1.83.0"

[features]
# Eventually we may want to build without the C++ bindings by default.
# Keeping it on for now to simplify development.
default = ["cpp"]
cpp = ["dep:cmake", "dep:cxx", "dep:cxx-build"]
rust = ["dep:thiserror"]

[dependencies]
cxx = { version = "1.0.136", optional = true }
thiserror = { version = "2.0.7" , optional = true}

[dev-dependencies]
rand = "0.9.0"

[build-dependencies]
cmake = { version = "0.1.52", optional = true }
cxx-build = { version = "1.0.136", optional = true }

[lints.rust]
dead_code = "allow"
unused_assignments = "allow"
unused_qualifications = "warn"

[lints.clippy]
needless_range_loop = "allow"
